@@ -3,3 +3,11 @@
 [Figma link](https://www.figma.com/file/dpeMlWStSWrVHfLd0Uohws/Untitled?node-id=0%3A1&t=PVQi61Ig3AWtWNMm-1)
 
 [JavaFX docs (with search)](https://openjfx.io/javadoc/15)
+
+## VM arguements
+
+### Windows
+`--module-path lib/windows/lib --add-modules javafx.controls,javafx.fxml`
+
+### Linux
+`--module-path lib/linux --add-modules javafx.controls,javafx.fxml`
